# Phishbowl

./: .gitignore  Cargo.toml  README.md  phishbowl.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  pipeline.rs
crates/cli/tests/: analyst_pipeline.rs  ask_resolution.rs  balance.rs
crates/llm/: Cargo.toml
crates/llm/src/: analyst.rs  client.rs  config.rs  lib.rs  performer.rs
crates/npc/: Cargo.toml
crates/npc/src/: facts.rs  lib.rs  observe.rs  persist.rs  referent.rs  reflect.rs  retrieve.rs
crates/referee/: Cargo.toml
crates/referee/src/: adjudicate.rs  appraise.rs  lib.rs  scale.rs  tests.rs
crates/scenario/: Cargo.toml
crates/scenario/src/: dto.rs  lib.rs  tests.rs
crates/world/: Cargo.toml
crates/world/src/: action.rs  channel.rs  ids.rs  lib.rs  log.rs  memory.rs  objective.rs  org.rs  persona.rs  player.rs  secret.rs  tuning.rs  units.rs
scenarios/it-support-credential/: scenario.ron
