[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "phishbowl"
path = "src/main.rs"

[dependencies]
world = { workspace = true }
referee = { workspace = true }
npc = { workspace = true }
llm = { workspace = true }
scenario = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
